--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" data-bs-theme="dark">
 <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
 
 <!-- TODO: -->
 <!--    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">-->
+
+    <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.css" rel="stylesheet">
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 
@@ -14,86 +23,23 @@
 </head>
 
 <body>
-    <table>
+
+<div class="container">
+    <table id="table-tasks" class="table table-striped">
         <thead>
             <tr>
+<!-- TODO: перенести заполнение в js? -->
                 <th>id</th>
                 <th>name</th>
-                <th>command</th>
                 <th>description</th>
+                <th>cron</th>
                 <th>is_enabled</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in tasks %}
-            <tr>
-                <td>{{ row.id }}</td>
-                <td>{{ row.name }}</td>
-                <td>{{ row.command }}</td>
-                <td>{{ row.description }}</td>
-                <td>{{ row.is_enabled }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-    <table>
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>task</th>
+                <th>is_infinite</th>
                 <th>command</th>
-                <th>status</th>
-                <th>process_id</th>
-                <th>process_return_code</th>
-                <th>create_date</th>
-                <th>start_date</th>
-                <th>finish_date</th>
+                <th>runs</th>
             </tr>
         </thead>
-        <tbody>
-            {% for row in task_runs %}
-            <tr>
-                <td>{{ row.id }}</td>
-                <td>{{ row.task.id }}</td>
-                <td>{{ row.command }}</td>
-                <td>{{ row.status }}</td>
-                <td>{{ row.process_id }}</td>
-                <td>{{ row.process_return_code }}</td>
-                <td>{{ row.create_date }}</td>
-                <td>{{ row.start_date }}</td>
-                <td>{{ row.finish_date }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
     </table>
-
-        task_run = ForeignKeyField(TaskRun, on_delete="CASCADE", backref="logs")
-    text = TextField()
-    kind = EnumField(choices=LogEnum)
-    date = DateTimeField(default=datetime.now)
-    <table>
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>task_run</th>
-                <th>text</th>
-                <th>kind</th>
-                <th>date</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in task_run_logs %}
-            <tr>
-                <td>{{ row.id }}</td>
-                <td>{{ row.task_run.id }}</td>
-                <td>{{ row.text }}</td>
-                <td>{{ row.kind }}</td>
-                <td>{{ row.date }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
+<div>
 </body>
 </html>
