--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -19,13 +19,16 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/task.js') }}"></script>
+    <script>
+        const TASK_ID = {{ task_id }};
+    </script>
 </head>
 
 <body>
 
 <div class="container">
-    <table id="table-tasks" class="table table-striped"></table>
+    <table id="table-task-runs" class="table table-striped"></table>
 </div>
 </body>
 </html>
