--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -1,31 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru" data-bs-theme="dark">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+{% extends 'base.html' %}
 
-<!-- TODO: -->
-<!--    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.png') }}">-->
+<!--TODO: -->
+{% block header %}
+<h1>{% block title %}Задачи{% endblock %}</h1>
+{% endblock %}
 
-    <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
+{% block content %}
+<table id="table-tasks" class="table table-striped"></table>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.css" rel="stylesheet">
-    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
-
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-</head>
-
-<body>
-
-<div class="container">
-    <table id="table-tasks" class="table table-striped"></table>
-</div>
-</body>
-</html>
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
+{% endblock %}
