Обновлено UI. В заголовок страницы задачи теперь выводится ее название

--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -2,7 +2,7 @@
 
 <!--TODO: -->
 {% block header %}
-<h1>{% block title %}Запуски{% endblock %}</h1>
+<h1>{% block title %}Задача "{{ task.name }}"{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
