--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -17,6 +17,15 @@
     <link href="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.css" rel="stylesheet">
     <script src="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.js"></script>
 
+    <!-- noty -->
+    <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
+    <script>
+        $.noty.defaults.theme = 'defaultTheme';
+        $.noty.defaults.layout = 'bottomRight';
+        $.noty.defaults.timeout = 10000; // 10 secs
+        $.noty.defaults.progressBar = true;
+    </script>
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
