--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
-<!--TODO: -->
-{% block header %}
-<h1>{% block title %}Задача "{{ task.name }}"{% endblock %}</h1>
+{% block title %}Задача "{{ task.name }}"{% endblock %}
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{ task.name }}</li>
-    </ol>
+{% block header %}
+<nav class="bg-light-subtle" aria-label="breadcrumb">
+    <div class="container-fluid">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item active" aria-current="page">{{ task.name }}</li>
+        </ol>
+    </div>
 </nav>
 {% endblock %}
 
