--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -29,9 +29,18 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
-<div class="container">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <!-- TODO: вместо иконки -->
+                <i class="bi bi-list-task"></i>
+                {{ title }}
+            </a>
+        </div>
+    </nav>
     {% block header %}{% endblock %}
-    {% block content %}{% endblock %}
-</div>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
