--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 
-<!--TODO: -->
+{% block title %}Главная страница{% endblock %}
+
 {% block header %}
-<h1>{% block title %}Задачи{% endblock %}</h1>
+<nav class="bg-light-subtle" aria-label="breadcrumb">
+    <div class="container-fluid">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item active" aria-current="page"></li>
+        </ol>
+    </div>
+</nav>
 {% endblock %}
 
 {% block content %}
