--- a/app_web/templates/task_run.html
+++ b/app_web/templates/task_run.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 
-<!--TODO: -->
-{% block header %}
-<h1>{% block title %}Запуск #{{ task_run.seq }}{% endblock %}</h1>
+{% block title %}Запуск #{{ task_run.seq }} задачи "{{ task_run.task.name }}"{% endblock %}
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-        <li class="breadcrumb-item"><a href="/task/{{ task_run.task.id }}">{{ task_run.task.name }}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">#{{ task_run.seq }}</li>
-    </ol>
+{% block header %}
+<nav class="bg-light-subtle" aria-label="breadcrumb">
+    <div class="container-fluid">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item"><a href="/task/{{ task_run.task.id }}">{{ task_run.task.name }}</a></li>
+            <li class="breadcrumb-item active" aria-current="page">#{{ task_run.seq }}</li>
+        </ol>
+    </div>
 </nav>
 {% endblock %}
 
