--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -38,7 +38,13 @@
             </a>
         </div>
     </nav>
-    {% block header %}{% endblock %}
+    <nav class="bg-light-subtle" aria-label="breadcrumb">
+        <div class="container-fluid">
+            <ol class="breadcrumb">
+                {% block header %}{% endblock %}
+            </ol>
+        </div>
+    </nav>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
