Обновлено. Добавлена страница уведомлений

--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -30,11 +30,15 @@
 </head>
 <body>
     <div class="sticky-top">
-        <nav class="navbar bg-body-tertiary ps-3">
+        <nav class="navbar bg-body-tertiary ps-3 pe-3">
             <a class="navbar-brand" href="/">
                 <!-- TODO: вместо иконки -->
                 <i class="bi bi-list-task"></i>
                 {{ title }}
+            </a>
+            <a href="/notifications" class="icon-link icon-link-hover d-flex">
+                Уведомления
+                <i class="bi bi-send"></i>
             </a>
         </nav>
         <nav class="bg-light-subtle ps-3" aria-label="breadcrumb">
