--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Все уведомления{% endblock %}
+{% block title %}Уведомления{% endblock %}
 
 {% block header %}
 <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-<li class="breadcrumb-item active" aria-current="page"></li>
+<li class="breadcrumb-item active" aria-current="page">{{ self.title() }}</li>
 {% endblock %}
 
 {% block content %}
