--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-<li class="breadcrumb-item active" aria-current="page"></li>
+<li class="breadcrumb-item active" aria-current="page">Задачи</li>
 {% endblock %}
 
 {% block content %}
