--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -19,12 +19,8 @@
 
     <!-- noty -->
     <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
-    <script>
-        $.noty.defaults.theme = 'defaultTheme';
-        $.noty.defaults.layout = 'bottomRight';
-        $.noty.defaults.timeout = 10000; // 10 secs
-        $.noty.defaults.progressBar = true;
-    </script>
+
+    <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
