--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -20,6 +20,8 @@
     <!-- noty -->
     <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
