--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="sticky-top">
-        <nav class="navbar bg-body-tertiary ps-3 pe-3">
+        <nav class="navbar bg-info-subtle ps-3 pe-3">
             <a class="navbar-brand" href="/">
                 <img src="/favicon.ico" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                 {{ title }}
