--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -8,6 +8,67 @@
 {% endblock %}
 
 {% block content %}
+<div
+        class="modal fade"
+        id="modal-create-notification"
+        tabindex="-1"
+        aria-labelledby="modal-create-notification-label"
+        aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <form method="post" action="/api/notification/create">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modal-create-notification-label">Создание уведомления</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="modal-create-notification-input-kind" class="form-label">Тип:</label>
+                            <select class="form-select" id="modal-create-notification-input-kind" name="kind" required>
+                                <option value="telegram">Телеграм</option>
+                                <option value="email">Почта</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="modal-create-notification-input-name">Название:</label>
+                            <input class="form-control" id="modal-create-notification-input-name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="modal-create-notification-input-text">Текст:</label>
+                            <textarea
+                                    class="form-control"
+                                    id="modal-create-notification-input-text"
+                                    style="height: 150px"
+                                    name="text"
+                                    required
+                            >TestТест</textarea>
+                        </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                    <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Создать</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="btn-toolbar" role="toolbar">
+    <div class="btn-group" role="group">
+        <button
+                type="button"
+                class="create-notification btn btn-success"
+                title="Создать уведомление"
+                data-bs-toggle="modal"
+                data-bs-target="#modal-create-notification"
+        >
+            <i class="bi bi-plus-lg"></i>
+        </button>
+    </div>
+</div>
+
 <table id="table-notifications" class="table table-striped"></table>
 
 <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
