Исправление UI. Страница уведомлений. Модальный диалог теперь закрывается при OK

--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -25,14 +25,24 @@
                 <div class="modal-body">
                         <div class="mb-3">
                             <label for="modal-create-notification-input-kind" class="form-label">Тип:</label>
-                            <select class="form-select" id="modal-create-notification-input-kind" name="kind" required>
+                            <select
+                                    class="form-select"
+                                    id="modal-create-notification-input-kind"
+                                    name="kind"
+                                    required
+                            >
                                 <option value="telegram">Телеграм</option>
                                 <option value="email">Почта</option>
                             </select>
                         </div>
                         <div class="mb-3">
                             <label for="modal-create-notification-input-name">Название:</label>
-                            <input class="form-control" id="modal-create-notification-input-name" name="name" required>
+                            <input
+                                    class="form-control"
+                                    id="modal-create-notification-input-name"
+                                    name="name"
+                                    required
+                            >
                         </div>
                         <div class="mb-3">
                             <label for="modal-create-notification-input-text">Текст:</label>
@@ -48,7 +58,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                    <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Создать</button>
+                    <button type="submit" class="btn btn-primary">Создать</button>
                 </div>
             </form>
         </div>
