Обновление UI. Добавлен API запрос для изменения задачи. В таблице задач теперь можно менять значения полей is_enabled и is_infinite

--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -8,7 +8,12 @@
 {% endblock %}
 
 {% block content %}
-<table id="table-tasks" class="table table-striped"></table>
+<table
+        id="table-tasks"
+        class="table"
+        data-url-update="/api/task/update"
+>
+</table>
 
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
