--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -57,8 +57,19 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                    <button type="submit" class="btn btn-primary">Создать</button>
+                    <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                    >
+                        Отмена
+                    </button>
+                    <button
+                            type="submit"
+                            class="btn btn-primary"
+                    >
+                        Создать
+                    </button>
                 </div>
             </form>
         </div>
