Рефакторинг UI. Убрано чередование строк в таблицах

--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<table id="table-task-runs" class="table table-striped"></table>
+<table id="table-task-runs" class="table"></table>
 
 <script>
     const TASK_ID = {{ task.id }};
