--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -98,7 +98,7 @@
     </div>
 </div>
 
-<table id="table-notifications" class="table table-striped"></table>
+<table id="table-notifications" class="table"></table>
 
 <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
 {% endblock %}
