--- a/app_web/templates/task_run.html
+++ b/app_web/templates/task_run.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<table id="table-task-run-logs" class="table table-striped"></table>
+<table id="table-task-run-logs" class="table"></table>
 
 <script>
     const TASK_ID = {{ task_run.task.id }};
