--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -23,7 +23,7 @@
 
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
 </head>
 <body>
     <div class="sticky-top">
