--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="modal-body">
                         <div class="mb-3">
-                            <label for="modal-create-notification-input-kind" class="form-label">Тип:</label>
+                            <label for="modal-create-notification-input-kind" class="form-label">Тип</label>
                             <select
                                     class="form-select"
                                     id="modal-create-notification-input-kind"
@@ -42,7 +42,7 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="modal-create-notification-input-name">Название:</label>
+                            <label for="modal-create-notification-input-name">Название</label>
                             <input
                                     class="form-control"
                                     id="modal-create-notification-input-name"
@@ -51,7 +51,7 @@
                             >
                         </div>
                         <div class="mb-3">
-                            <label for="modal-create-notification-input-text">Текст:</label>
+                            <label for="modal-create-notification-input-text">Текст</label>
                             <textarea
                                     class="form-control"
                                     id="modal-create-notification-input-text"
