Обновление UI. Поддержка авторизации по логину и паролю. Добавлена страница "login"

--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -32,10 +32,17 @@
                 <img src="/favicon.ico" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                 {{ title }}
             </a>
-            <a href="/notifications" class="icon-link icon-link-hover d-flex">
-                Уведомления
-                <i class="bi bi-send"></i>
-            </a>
+            <div class="d-flex">
+                <a href="/notifications" class="icon-link icon-link-hover">
+                    Уведомления
+                    <i class="bi bi-send"></i>
+                </a>
+                <div class="vr mx-3"></div>
+                <a href="/logout" class="icon-link icon-link-hover">
+                    Выйти
+                    <i class="bi bi-box-arrow-left"></i>
+                </a>
+            </div>
         </nav>
         <nav class="bg-light-subtle px-3" aria-label="breadcrumb">
             <ol class="breadcrumb">
