Обновление UI. Таблица задач. Серый цвет для строк с не активными задачами

--- a/app_web/static/base.css
+++ b/app_web/static/base.css
@@ -1,1 +1,4 @@
-/* TODO: */
+.row-disabled * {
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-secondary-rgb),var(--bs-text-opacity)) !important;
+}
