--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -8,6 +8,19 @@
 {% endblock %}
 
 {% block content %}
+<div class="btn-toolbar" role="toolbar">
+    <div class="btn-group" role="group">
+        <a
+                class="btn btn-success"
+                title="Создать задачу"
+                href="/task/create"
+                role="button"
+        >
+            <i class="bi bi-plus-lg"></i>
+        </a>
+    </div>
+</div>
+
 <table
         id="table-tasks"
         class="table"
