--- a/app_web/templates/login.html
+++ b/app_web/templates/login.html
@@ -1,63 +1,51 @@
-<!DOCTYPE html>
-<html lang="ru" data-bs-theme="dark">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Вход - {{ title }}</title>
+{% extends 'base.html' %}
 
-    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/avatar-256.png') }}">
+{% block title %}Вход{% endblock %}
 
-    <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
+{% block header %}
+<li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+<li class="breadcrumb-item active" aria-current="page">Вход</li>
+{% endblock %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- noty -->
-    <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img
-                        src="{{ url_for('static', filename='images/avatar.png') }}"
-                        class="rounded img-fluid"
-                        alt="avatar"
-                />
-            </div>
-            <div class="col my-auto d-block">
-                <h1 class="mb-5">Вход в {{ title }}</h1>
-
-                <form method="post" action="/login{% if query_string %}{{ '?' + query_string }}{% endif %}">
-                    <div class="mb-3">
-                        <label class="form-label" for="login">Логин</label>
-                        <input id="login" class="form-control form-control-lg" name="login" />
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label" for="password">Пароль</label>
-                        <input type="password" id="password" class="form-control form-control-lg" name="password" />
-                    </div>
-                    {% with errors = get_flashed_messages(category_filter=["error"]) %}
-                    {% if errors %}
-                    {%- for msg in errors %}
-                    <p class="text-danger">
-                        <i class="bi bi-exclamation-circle"></i>
-                        {{ msg }}
-                    </p>
-                    {% endfor -%}
-                    {% endif %}
-                    {% endwith %}
-                    <button
-                            type="submit"
-                            class="btn btn-primary btn-lg w-100"
-                    >
-                        Войти
-                        <i class="bi bi-box-arrow-in-right"></i>
-                    </button>
-                </form>
-            </div>
-        </div>
+{% block content %}
+<div class="row">
+    <div class="col">
+        <img
+                src="{{ url_for('static', filename='images/avatar.png') }}"
+                class="rounded img-fluid"
+                alt="avatar"
+        />
     </div>
-</body>
-</html>
+    <div class="col my-auto d-block">
+        <h1 class="mb-5">Вход в {{ title }}</h1>
+
+        <form method="post" action="/login{% if query_string %}{{ '?' + query_string }}{% endif %}">
+            <div class="mb-3">
+                <label class="form-label" for="login">Логин</label>
+                <input id="login" class="form-control form-control-lg" name="login" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="password">Пароль</label>
+                <input type="password" id="password" class="form-control form-control-lg" name="password" />
+            </div>
+            {% with errors = get_flashed_messages(category_filter=["error"]) %}
+            {% if errors %}
+            {%- for msg in errors %}
+            <p class="text-danger">
+                <i class="bi bi-exclamation-circle"></i>
+                {{ msg }}
+            </p>
+            {% endfor -%}
+            {% endif %}
+            {% endwith %}
+            <button
+                    type="submit"
+                    class="btn btn-primary btn-lg w-100"
+            >
+                Войти
+                <i class="bi bi-box-arrow-in-right"></i>
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock %}
