--- a/app_web/templates/notifications.html
+++ b/app_web/templates/notifications.html
@@ -31,7 +31,7 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="modal-create-notification-input-kind" class="form-label">Тип</label>
-                        <div class="input-group mb-3">
+                        <div class="input-group">
                             <span class="input-group-text">
                                 <input
                                         class="form-check-input"
