--- a/app_web/templates/task_base.html
+++ b/app_web/templates/task_base.html
@@ -45,7 +45,7 @@
                     data-url="/api/task/{{ task.id }}/action/run"
                     data-method="POST"
             >
-                <i class="bi bi-caret-right-fill"></i>
+                <i class="bi bi-caret-right-square-fill"></i>
             </button>
             <a
                     class="text-success-emphasis"
