--- a/app_web/templates/task_base.html
+++ b/app_web/templates/task_base.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <div>{{ task.description | safe }}</div>
+    <div>{% if task.description %}{{ task.description | safe }}{% endif %}</div>
 
     <div class="form-check form-switch">
         <input
