--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -31,7 +31,7 @@
             </button>
             <a
                     class="text-success-emphasis"
-                    href="/task/{{ task.id }}/edit"
+                    href="/task/{{ task.id }}/update"
                     title="Редактировать"
             >
                 <i class="bi bi-pencil-square"></i>
