--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -79,13 +79,14 @@
                         id="cron"
                         rows="1"
                         name="cron"
-                        aria-describedby="cron-description"
                 >{% if is_mode_edit and task.cron %}{{ task.cron | e }}{% endif %}</textarea>
-                <div class="form-text" id="cron-description">
-                    Формат cron.
+                <div class="form-text">
+                    <span class="cron-result-error text-danger"></span>
+                    <span class="cron-result"></span>
                 </div>
             </div>
             <div class="col">
+                Формат cron.
                 <div><code>H */1 * * *</code> - Каждый час</div>
                 <div><code>H */8 * * *</code> - Каждые 8 часов</div>
                 <div><code>H 0 * * *</code> - Раз в сутки</div>
@@ -138,6 +139,5 @@
     </div>
 </form>
 
-<!-- TODO: -->
 <script src="{{ url_for('static', filename='js/task_create_or_update.js') }}"></script>
 {% endblock %}
