--- a/app_web/static/base.css
+++ b/app_web/static/base.css
@@ -1,6 +1,6 @@
 .row-disabled * {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-secondary-rgb),var(--bs-text-opacity)) !important;
+    color: rgba(var(--bs-secondary-rgb),var(--bs-text-opacity));
 }
 
 /* SOURCE: https://getbootstrap.com/docs/5.3/helpers/icon-link/#css-variables */
