--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col cron-examples">
-                Формат cron.
+                Формат cron. Примеры:
                 <div><code>H */1 * * *</code> - Каждый час</div>
                 <div><code>H */8 * * *</code> - Каждые 8 часов</div>
                 <div><code>H 0 * * *</code> - Раз в сутки</div>
