--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -75,6 +75,22 @@
                 rows="3"
                 name="description"
         >{% if is_mode_edit and task.description %}{{ task.description | e }}{% endif %}</textarea>
+        <div class="form-check form-switch">
+            <input
+                    id="show-description-preview"
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#description-preview-collapse"
+                    aria-expanded="false"
+                    aria-controls="description-preview-collapse"
+            />
+            <label for="show-description-preview" class="form-label text-secondary-emphasis">Предпросмотр</label>
+        </div>
+        <div id="description-preview-collapse" class="collapse">
+            <div id="description-preview" class="card card-body"></div>
+        </div>
     </div>
     <div class="mb-3">
         <label for="cron" class="form-label">Расписание</label>
