--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -89,7 +89,7 @@
             <label for="show-description-preview" class="form-label text-secondary-emphasis">Предпросмотр</label>
         </div>
         <div id="description-preview-collapse" class="collapse">
-            <div id="description-preview" class="card card-body"></div>
+            <div id="description-preview"></div>
         </div>
     </div>
     <div class="mb-3">
