--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -104,7 +104,25 @@
                 >{% if is_mode_edit and task.cron %}{{ task.cron | e }}{% endif %}</textarea>
                 <div class="form-text">
                     <span class="cron-result-error text-danger"></span>
-                    <span class="cron-result"></span>
+                </div>
+                <div class="form-check form-switch">
+                    <input
+                            id="show-next-dates"
+                            class="form-check-input"
+                            type="checkbox"
+                            role="switch"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#next-dates-collapse"
+                            aria-expanded="false"
+                            aria-controls="next-dates-collapse"
+                    />
+                    <label for="show-next-dates" class="form-label text-secondary-emphasis">Даты планирования</label>
+                </div>
+                <div id="next-dates-collapse" class="collapse">
+                    <div
+                            id="next-dates"
+                            class="vstack font-monospace text-primary-emphasis"
+                    ></div>
                 </div>
             </div>
             <div class="col cron-examples">
