Обновление UI. Фиксация кнопки снизу

--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -156,7 +156,7 @@
             <label for="is_infinite" class="form-label">Бесконечный</label>
         </div>
     </div>
-    <div class="mb-3">
+    <div class="pb-2 sticky-bottom">
         <button
                 type="submit"
                 class="btn btn-primary"
