Обновление UI. Исправлена ссылка на "Отмена" для диалога создания задачи

--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -170,7 +170,11 @@
         </button>
         <a
                 class="btn btn-secondary"
+                {% if is_mode_edit %}
                 href="/task/{{ task.id }}"
+                {% else %}
+                href="/"
+                {% endif %}
                 role="button"
         >
             <i class="bi bi-x-circle"></i>
