Обновление. Переименование "/task/<int:task_id>/action/run" в "/task/<int:task_id>/do-run"

--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -24,7 +24,7 @@
             <button
                     class="btn text-success p-0"
                     title="Запуск"
-                    data-url="/api/task/{{ task.id }}/action/run"
+                    data-url="/api/task/{{ task.id }}/do-run"
                     data-method="POST"
             >
                 <i class="bi bi-caret-right-square-fill"></i>
