--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -11,7 +11,7 @@
 <table
         id="table-tasks"
         class="table"
-        data-url-update="/api/task/update"
+        data-url-update="/api/task/{context_obj_id}/update"
 >
 </table>
 
