--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -7,23 +7,24 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/avatar-256.png') }}">
 
-    <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='libs/jquery-3.1.1.min.js') }}"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap-5.3.3/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='libs/bootstrap-5.3.3/bootstrap.bundle.min.js') }}"></script>
 
-    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.css" rel="stylesheet">
-    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.2/datatables.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap-icons-1.11.3/bootstrap-icons.min.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/DataTables-2.0.5/datatables.min.css') }}">
+    <script src="{{ url_for('static', filename='libs/DataTables-2.0.5/datatables.min.js') }}"></script>
 
     <!-- noty -->
-    <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="{{ url_for('static', filename='libs/moment-2.30.1.js') }}"></script>
 
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
     <style>
         {% block custom_css %}{% endblock %}
     </style>
