--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -127,7 +127,10 @@
                 <div>
                     <p><code>MINUTE HOUR DOM MONTH DOW</code></p>
                     <p>
-                        <table>
+                        <table class="table">
+                            <thead>
+                                <tr><th>Поле</th><th>Описание</th></tr>
+                            </thead>
                             <tbody>
                                 <tr><td><code>MINUTE</code></td><td>Минуты в часе (0–59)</td></tr>
                                 <tr><td><code>HOUR</code></td><td>Суточный час (0–23)</td></tr>
